--- a/sass/abstracts/_utilities.scss
+++ b/sass/abstracts/_utilities.scss
@@ -4,7 +4,8 @@
   letter-spacing: 3px;
   text-align: center;
   @include respond(phone) {
-    font-size: 4.5rem;
+    font-size: 3.8rem;
+    letter-spacing: 1px;
   }
 }
 
